# langgraph-langserve-starterkit

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yml
client/: call_graph_runnable.ipynb
server/: Dockerfile.dev  pyproject.toml
server/app/: graph.py  main.py  settings.py
server/app/models/: base.py  data.py
